--- a/css/style2.css
+++ b/css/style2.css
@@ -1,3 +1,5 @@
+
+
 .body {
   box-sizing: border-box;
 }
@@ -65,9 +67,9 @@
 .text-decoration-none {
   line-height: 0px;
 }
-.text {
+/* .text {
   font-size: 48px;
-}
+} */
 .custom-section-card {
   margin-top: 200px;
 }
@@ -76,12 +78,13 @@
   width: 400px;
 }
 .hover-img {
+  border-radius: 15px 0px;
   transition: all 0.4s;
   box-shadow: 0 0 10px gray;
 }
 .hover-img:hover {
   transform: translateY(-10px);
-  box-shadow: 0px 10px 20px 3px rgb(219, 219, 219);
+  box-shadow: 0px 10px 20px 3px rgb(235, 68, 68);
 }
 .heading-div {
   height: auto;
@@ -141,7 +144,7 @@
 }
 .bannar-text {
   width: 100%;
-  height: 500px;
+  height: 300px;
   margin: auto;
   align-items: center;
   text-align: center;
